--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Hearty Vegetable Lasagna</title>
     </head>
     <body>
         <h1>Hearty Vegetable Lasagna</h1>
