Adapt to changes in image source

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Hearty Vegetable Lasagna</h1>
-        <img src="../img/image.jpeg" alt="A lasagna. Image taken by Sherri">
+        <img src="../img/lasagna.jpeg" alt="A lasagna. Image taken by Sherri">
         <h2>Description</h2>
         <p>A very tasty vegan, hearty lasagna.</p>
         <h2>Ingredients</h2>
