--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Hearty Vegetable Lasagna</a>
+        <a href="./recipes/pizza.html">BBQ Chicken Pizza</a>
     </body>
 </html>
