--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Hearty Vegetable Lasagna</a>
         <a href="./recipes/pizza.html">BBQ Chicken Pizza</a>
+        <a href="./recipes/bruschetta.html">Strawberry Bruschetta</a>
     </body>
 </html>
