Improve how recipes are displayed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Hearty Vegetable Lasagna</a>
-        <a href="./recipes/pizza.html">BBQ Chicken Pizza</a>
-        <a href="./recipes/bruschetta.html">Strawberry Bruschetta</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Hearty Vegetable Lasagna</a></li>
+            <li><a href="./recipes/pizza.html">BBQ Chicken Pizza</a></li>
+            <li><a href="./recipes/bruschetta.html">Strawberry Bruschetta</a></li>
+        </ul>
     </body>
 </html>
