--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -22,5 +22,6 @@
             <li>Place bread under the broiler for 1 to 2 minutes, just until lightly toasted. Spoon some chopped strawberries onto each piece of toast, then sprinkle sugar over the strawberries.</li>
             <li>Place under the broiler again until sugar is caramelized, 3 to 5 minutes. Serve immediately.</li>
         </ol>
+        <p>These recipes can be found at <a href="https://www.allrecipes.com/">allrecipes.com</a></p>
     </body>
 </html>
