--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -25,5 +25,6 @@
             <li>Place pizza crust on a medium baking sheet. Spread the crust with barbecue sauce. Top with chicken, cilantro, pepperoncini peppers, onion, and cheese.</li>
             <li>Bake in the preheated oven for 15 minutes, or until cheese is melted and bubbly.</li>
         </ol>
+        <p>These recipes can be found at <a href="https://www.allrecipes.com/">allrecipes.com</a></p>
     </body>
 </html>
