--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -32,5 +32,6 @@
            <li>Preheat oven to 350 degrees F (175 degrees C). Spread 1 cup tomato sauce into the bottom of a greased 9x13 inch baking dish. Layer 1/2 each, lasagna noodles, ricotta mix, sauce, and Parmesan cheese. Repeat layering, and top with remaining 2 cups mozzarella cheese.</li>
            <li>Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.</li>
         </ol>
+        <p>These recipes can be found at <a href="https://www.allrecipes.com/">allrecipes.com</a></p>
     </body>
 </html>
